fix: Lint issues and updated files

--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -6,8 +6,9 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "jsxBracketSameLine": true,
   "arrowParens": "always",
   "proseWrap": "always",
+  "spaceBeforeFunctionParen": true,
   "htmlWhitespaceSensitivity": "ignore"
 }
