--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,5 +12,5 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
       - run: >
-          pip install -r pre-commit
+          pip install -r pre-commit &&
           pre-commit run --all-files
