--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,5 +11,5 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
       - run: >
-          pip install -r pre-commit &&
+          pip install -r requirements.txt &&
           pre-commit run --all-files
