--- a/.github/workflows/es-lint.yml
+++ b/.github/workflows/es-lint.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install modules
         working-directory: ./frontend
-        run: npm install
+        run: npm install eslint@8.33.0
       - name: Run ESLint
         working-directory: ./frontend
         run: npm run lint
