--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -2,13 +2,11 @@
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
   "arrowParens": "always",
   "proseWrap": "always",
-  "spaceBeforeFunctionParen": true,
   "htmlWhitespaceSensitivity": "ignore"
 }
