--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prettier": "prettier src",
-    "prettier:check": "prettier src --check"
+    "prettier:fix": "prettier src --write"
   },
   "eslintConfig": {
     "extends": [
