--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,3 +5,9 @@ line_length = 120
 [tool.black]
 line-length = 120
 target-version = ['py310']
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::UserWarning",
+    "ignore::DeprecationWarning"
+]
