--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-bootstrap-typeahead": "^6.0.2",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
